--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "apexcharts": "^3.37.3",
+    "apexcharts": "^4.0.0",
     "axios": "^1.3.5",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
@@ -20,7 +20,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^3.3.1",
     "yup": "^1.1.1"
   },
