--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,12 @@
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "prom-client": "^14.2.0",
     "sequelize": "^6.31.0",
+    "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
     "winston": "^3.8.2"
