--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,22 @@ Thumbs.db
 # Временные файлы
 *.tmp
 *.temp
+
+# Загруженные файлы
+uploads/
+attachments/
+
+# База данных
+*.sqlite
+*.db
+
+# Системные файлы
+.DS_Store
+Thumbs.db
+*.pid
+*.seed
+*.pid.lock
+
+# Кэш
+.cache/
+.parcel-cache/
