feat: Добавлены файлы конфигурации окружения
- Созданы .env файлы для всех компонентов (backend, frontend, telegram-bot)
- Добавлены .env.example шаблоны для безопасного развертывания
- Обновлен .gitignore для включения .env файлов в репозиторий
- Настроены переменные окружения для запуска проекта
- Проект готов к работе с установленными зависимостями и инициализированной БД

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Среда выполнения
-.env
+# .env - убрано из игнора для включения в репозиторий
 .env.local
 .env.development.local
 .env.test.local
