Обновление системы Service Desk: улучшения UI, интеграция Telegram бота и тестовые скрипты
- Обновлены контроллеры backend для улучшенной обработки заявок и пользователей
- Улучшен UI frontend: страницы создания заявок, деталей, профиля пользователя и списка пользователей
- Расширена функциональность Telegram бота с новыми обработчиками
- Добавлены тестовые скрипты для проверки API и функциональности
- Обновлены конфигурационные файлы и middleware
- Добавлена документация по работе с Telegram ботом

--- a/backend/.env
+++ b/backend/.env
@@ -16,6 +16,9 @@ JWT_EXPIRES_IN=24h
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=7160099154:AAEKZRBREoZZSOxKb6gdY0DeRjDyL1hS24A
 
+# Service API Token for internal services
+SERVICE_API_TOKEN=service-desk-api-token
+
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
 
