--- a/telegram-bot/.env
+++ b/telegram-bot/.env
@@ -1,10 +1,10 @@
 # Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
+TELEGRAM_BOT_TOKEN=7160099154:AAEKZRBREoZZSOxKb6gdY0DeRjDyL1hS24A
 BOT_PORT=3001
 
 # API Configuration
 API_BASE_URL=http://localhost:3007/api
-API_TOKEN=your-api-token-for-service
+API_TOKEN=service-desk-api-token
 
 # Webhook Configuration
 WEBHOOK_URL=http://localhost:3001
